Add LICENSEs to the packages themselves; .gitignore dist-newstyle.
Change-Id: Id8c29c9e01badfc5e5d4079760d124c6c928e5f5

--- a/wrapped-generic-default/package.yaml
+++ b/wrapped-generic-default/package.yaml
@@ -21,6 +21,7 @@ description: |
   Wrapped Generic, so that Default instances can be derived as
   "deriving Default via Wrapped Generic MyType".
 license: Apache-2.0
+license-file: LICENSE
 author: Reiner Pope <reinerp@google.com>
 copyright: 2017-2021 Google LLC
 maintainer: Andrew Pritchard <awpr@google.com>
