--- a/wrapped/package.yaml
+++ b/wrapped/package.yaml
@@ -23,6 +23,7 @@ description: |
   add it as an instance for 'Wrapped' or 'Wrapped1', and users will be able to
   derive it uniformly as @deriving TheClass via Wrapped TheType@.
 license: Apache-2.0
+license-file: LICENSE
 author: Andrew Pritchard <awpr@google.com>
 copyright: 2019-2021 Google LLC
 maintainer: Andrew Pritchard <awpr@google.com>
