Explicitly exclude generated Paths modules to avoid spurious rebuilds.

--- a/wrapped-generic-default/package.yaml
+++ b/wrapped-generic-default/package.yaml
@@ -39,3 +39,7 @@ library:
   source-dirs: src
   exposed-modules:
     - Data.Wrapped.Default
+
+  when:
+    condition: false
+    other-modules: Paths_wrapped_generic_default
