--- a/wrapped/package.yaml
+++ b/wrapped/package.yaml
@@ -15,7 +15,7 @@
 name: wrapped
 version: 0.1.0.1
 category: Generics
-synopsis: Provides a single standardized place to hang DerivingVia instances.
+synopsis: Newtypes to carry DerivingVia instances
 description: |
   This exports the newtypes 'Wrapped' and 'Wrapped1', which are meant to hold
   typeclass implementations derived from other classes (most frequently,
