--- a/wrapped/wrapped.cabal
+++ b/wrapped/wrapped.cabal
@@ -3,12 +3,10 @@ cabal-version: 1.12
 -- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
---
--- hash: 6903f5bc0c607aaaa131021f62109719c6bea186bb1423df1baf0d06b7ddc2cd
 
 name:           wrapped
 version:        0.1.0.1
-synopsis:       Provides a single standardized place to hang DerivingVia instances.
+synopsis:       Newtypes to carry DerivingVia instances
 description:    This exports the newtypes 'Wrapped' and 'Wrapped1', which are meant to hold
                 typeclass implementations derived from other classes (most frequently,
                 'Generic' and 'Generic1').  If you implement a general instance of a class,
